<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="temperature">Temperature ((degree): </string>
    <string name="feelslike">"Feels Like (degree): "</string>
    <string name="low">"Low Temperature (degree): "</string>
    <string name="high">"High Temperature (degree): "</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="error_msg">Unable to connect, try again later.</string>
</resources>